--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CampusRide</title>
+  <title>CampusRide - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to CampusRide!</h1>
-  <p>Plan your next campus ride easily.</p>
-  <button>Start Your Campus Ride Today!</button>
+  <nav class="top-nav">
+    <a href="index.html" class="active">Home</a>
+    <a href="login.html">Login</a>
+    <a href="create-ride.html">Create Ride</a>
+    <a href="find-ride.html">Find Ride</a>
+    <a href="profile.html">Profile</a>
+  </nav>
+
+  <div class="container card">
+    <h1>Welcome to CampusRide 🚗</h1>
+    <p>Plan, share, and find rides easily at Imam University.</p>
+    <button onclick="location.href='login.html'" class="primary-btn">Start Your Campus Ride</button>
+  </div>
 </body>
 </html>
