--- a/login.html
+++ b/login.html
@@ -3,84 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <title>CampusRide - Login</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background: #fff;
+      padding: 20px 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 320px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
+    .role-btn {
+      width: 45%;
+      margin: 10px;
+      background: #2196F3;
+    }
+    .role-btn:hover {
+      background: #1976D2;
+    }
+  </style>
 </head>
 <body>
-  <nav class="top-nav">
-    <a href="index.html">Home</a>
-    <a href="create-ride.html">Create Ride</a>
-    <a href="find-ride.html">Find Ride</a>
-    <a href="profile.html">Profile</a>
-    <a href="login.html" class="active">Login</a>
-  </nav>
-
-  <div class="container card">
-    <h2>Login to CampusRide</h2>
-    <form class="form">
-      <label>Email (University)</label>
-      <input type="email" placeholder="example@imamu.edu.sa" required>
-
-      <label>Password</label>
-      <input type="password" placeholder="••••••••" required>
-
-      <button type="submit" class="primary-btn">Login</button>
-      <p class="helper">Don't have an account? <a href="#">Sign up</a></p>
+  <div class="container" id="loginContainer">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <input type="email" placeholder="University Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Login</button>
     </form>
   </div>
+
   <script>
-  document.querySelector("form").addEventListener("submit", function(e) {
-    e.preventDefault(); // prevent default form submission
+    const form = document.getElementById("loginForm");
+    const container = document.getElementById("loginContainer");
 
-    const email = document.querySelector("input[type='email']").value;
-    const password = document.querySelector("input[type='password']").value;
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
 
-    if (!email.endsWith("@imamu.edu.sa")) {
-      alert("Please use a university email ending with @imamu.edu.sa");
-      return;
-    }
+      const email = form.querySelector("input[type='email']").value;
+      const password = form.querySelector("input[type='password']").value;
 
-    if (password.length < 6) {
-      alert("Password must be at least 6 characters");
-      return;
-    }
+      // check university email
+      if (!email.endsWith("@imamu.edu.sa")) {
+        alert("Please use a university email ending with @imamu.edu.sa");
+        return;
+      }
 
-    // If everything is valid, redirect to Create Ride page
-    window.location.href = "create-ride.html";
-  });
-</script>
-  <script>
-  document.querySelector("form").addEventListener("submit", function(e) {
-    e.preventDefault();
+      // check password length
+      if (password.length < 6) {
+        alert("Password must be at least 6 characters");
+        return;
+      }
 
-    const email = document.querySelector("input[type='email']").value;
-    const password = document.querySelector("input[type='password']").value;
+      // replace form with role selection
+      container.innerHTML = `
+        <h2>Select your role</h2>
+        <button id="driverBtn" class="role-btn">Driver</button>
+        <button id="passengerBtn" class="role-btn">Passenger</button>
+      `;
 
-    if (!email.endsWith("@imamu.edu.sa")) {
-      alert("Please use a university email ending with @imamu.edu.sa");
-      return;
-    }
+      document.getElementById("driverBtn").addEventListener("click", function() {
+        window.location.href = "create-ride.html";
+      });
 
-    if (password.length < 6) {
-      alert("Password must be at least 6 characters");
-      return;
-    }
-
-    // Show role selection
-    const container = document.querySelector(".container");
-    container.innerHTML = `
-      <h2>Select your role</h2>
-      <button id="driverBtn">Driver</button>
-      <button id="passengerBtn">Passenger</button>
-    `;
-
-    document.getElementById("driverBtn").addEventListener("click", function() {
-      window.location.href = "create-ride.html";
+      document.getElementById("passengerBtn").addEventListener("click", function() {
+        window.location.href = "find-ride.html";
+      });
     });
-
-    document.getElementById("passengerBtn").addEventListener("click", function() {
-      window.location.href = "find-ride.html";
-    });
-  });
-</script>
+  </script>
 </body>
 </html>
