--- a/index.html
+++ b/index.html
@@ -2,22 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CampusRide - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <title>CampusRide - Welcome</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #2196F3, #E3F2FD);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .welcome-container {
+      text-align: center;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    h1 {
+      color: #1976D2;
+      margin-bottom: 20px;
+    }
+    button {
+      padding: 12px 24px;
+      font-size: 18px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
+  </style>
 </head>
 <body>
-  <nav class="top-nav">
-    <a href="index.html" class="active">Home</a>
-    <a href="login.html">Login</a>
-    <a href="create-ride.html">Create Ride</a>
-    <a href="find-ride.html">Find Ride</a>
-    <a href="profile.html">Profile</a>
-  </nav>
-
-  <div class="container card">
-    <h1>Welcome to CampusRide 🚗</h1>
-    <p>Plan, share, and find rides easily at Imam University.</p>
-    <button onclick="location.href='login.html'" class="primary-btn">Start Your Campus Ride</button>
+  <div class="welcome-container">
+    <h1>Welcome to CampusRide 🚀</h1>
+    <button onclick="window.location.href='login.html'">Start</button>
   </div>
 </body>
 </html>
