--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
     h1 {
       color: #333;
       font-weight: 600;
-      margin-bottom: 10px;
-    }
-    p {
-      color: #666;
-      margin-bottom: 25px;
-      font-size: 14px;
+      margin-bottom: 25px; /* زودنا المسافة بدل الجملة */
     }
     button {
       padding: 12px 28px;
