--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
 
   <div class="container card">
     <h2>My Profile</h2>
-    <p><strong>Name:</strong> Reema</p>
+    <p><strong>Name:</strong> aaaa</p>
     <p><strong>Email:</strong> example@imamu.edu.sa</p>
 
     <h3>My Rides</h3>
